add crud socialmedia and photo
