# sesi_4/main.go
@@ -2,9 +2,11 @@ package main
 
 import (
 	"sesi_4_final_project/auth"
+	"sesi_4_final_project/comments"
 	"sesi_4_final_project/database"
 	"sesi_4_final_project/handler"
 	"sesi_4_final_project/middlewares"
+	"sesi_4_final_project/photo"
 	"sesi_4_final_project/socialmedia"
 	"sesi_4_final_project/user"
 
@@ -40,13 +42,19 @@ func main() {
 	db := database.LoadDB()
 	userRepository := user.NewRepository(db)
 	socialMediaRepository := socialmedia.NewRepository(db)
+	commentsRepository := comments.NewRepository(db)
+	photoRepository := photo.NewRepository(db)
 
 	userService := user.NewService(userRepository)
 	socialMediaService := socialmedia.NewService(socialMediaRepository)
+	commentsService := comments.NewService(commentsRepository)
+	photoService := photo.NewService(photoRepository)
 	authService := auth.NewService()
 
 	userHandler := handler.NewUserHandler(userService, authService)
 	socialMediaHandler := handler.NewSocialMediaHandler(socialMediaService)
+	commentsHandler := handler.NewCommentsHandler(commentsService)
+	photoHandler := handler.NewPhotoHandler(photoService)
 
 	r := gin.Default()
 
@@ -63,5 +71,20 @@ func main() {
 	socialMediaApi.POST("/", middlewares.AuthMiddleware(authService, userService), socialMediaHandler.CreateSocialMedia)
 	socialMediaApi.PUT("/:socialMediaID", middlewares.AuthMiddleware(authService, userService), middlewares.AuthorizationSocialMediaByUserID(socialMediaService), socialMediaHandler.UpdateSocialMedia)
 	socialMediaApi.DELETE("/:socialMediaID", middlewares.AuthMiddleware(authService, userService), middlewares.AuthorizationSocialMediaByUserID(socialMediaService), socialMediaHandler.DeleteSocialMedia)
+
+	commentApi := api.Group("/comment/:photoID")
+	commentApi.GET("/", middlewares.AuthMiddleware(authService, userService), commentsHandler.GetAllComment)
+	commentApi.GET("/:commentID", middlewares.AuthMiddleware(authService, userService), commentsHandler.GetOneComment)
+	commentApi.POST("/", middlewares.AuthMiddleware(authService, userService), commentsHandler.CreateComment)
+	commentApi.PUT("/:commentID", middlewares.AuthMiddleware(authService, userService), middlewares.AuthorizationCommentByUserID(commentsService), commentsHandler.UpdateComment)
+	commentApi.DELETE("/:commentID", middlewares.AuthMiddleware(authService, userService), middlewares.AuthorizationCommentByUserID(commentsService), commentsHandler.DeleteComment)
+
+	photoApi := api.Group("/photo")
+	photoApi.GET("/", middlewares.AuthMiddleware(authService, userService), photoHandler.GetAllPhoto)
+	photoApi.GET("/:photoID", middlewares.AuthMiddleware(authService, userService), photoHandler.GetOnePhoto)
+	photoApi.POST("/", middlewares.AuthMiddleware(authService, userService), photoHandler.CreatePhoto)
+	photoApi.PUT("/:photoID", middlewares.AuthMiddleware(authService, userService), middlewares.AuthorizationPhotoByUserID(photoService), photoHandler.UpdatePhoto)
+	photoApi.DELETE("/:photoID", middlewares.AuthMiddleware(authService, userService), middlewares.AuthorizationPhotoByUserID(photoService), photoHandler.DeletePhoto)
+
 	r.Run(":8080")
 }
